# yamsergey.mcp.skills

./: .gitignore  DEMO.md  MCP_AGGREGATION_GUIDE.md  QUICKSTART.md  README.md  SKILL_CREATOR.md  STATUS.md  debug_mcp.py  example-skills-config.json  pyproject.toml  test_basic_mcp_server.py  test_mcp_server.py  test_standalone.py  test_stdio.py
.claude/: CLAUDE.md  skills
.github/workflows/: publish.yml
android-ndk-setup/: SKILL.md
android-sdk-setup/: SKILL.md
bash-environment-config/: SKILL.md
flutter-setup/: SKILL.md
kotlin-lsp-setup/: SKILL.md
mcp_skills/: __init__.py  __main__.py  embeddings.py  mcp_aggregator.py  search_skills_description.md  security.py  server.py  skill_manager.py  transports.py
neovim-lazyvim-setup/: SKILL.md
skills/: skill-creator.md
tests/: test_embeddings.py  test_multi_transport.py  test_security.py  test_skill_manager.py
tmux-setup/: SKILL.md
